[gd_scene load_steps=6 format=3 uid="uid://dkxtlh2lt7alp"]

[ext_resource type="Script" path="res://scenes/switchable_block_yellow.gd" id="1_ge3xk"]
[ext_resource type="Texture2D" uid="uid://cjdp7vx8dqi8x" path="res://sprites/yellow_block__active_1.png" id="2_gx4wh"]
[ext_resource type="Texture2D" uid="uid://du5dvl3q4bxts" path="res://sprites/yellow_block__inactive_1.png" id="3_cjmvn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cg6v3"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urstx"]
size = Vector2(16, 16)

[node name="SwitchableBlockYellow" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ge3xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cg6v3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_urstx")

[node name="ActiveSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_gx4wh")

[node name="InactiveSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_cjmvn")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
